--- a/webroot/haru.html
+++ b/webroot/haru.html
@@ -38,7 +38,7 @@
   <canvas id="canvas" width="1200" height="600"></canvas>
 
   <div class="controls">
-    <button onclick="playMotion()">モーション（きをつけ）</button>
+    <button onclick="playMotion()">モーション（右の数字で選ぶ）</button>
     <select id="mo">
       <option value="0" selected>0</option>
       <option value="1">1</option>
